# serl

./: .gitignore  README.md
Code/franka_ros2_official_control_success/: README.md
Code/franka_ros2_official_control_success/data/: joint_position_example_trajectory_10s_10000steps_relative.csv
Code/franka_ros2_official_control_success/scripts/: clear_ros.sh  list_controllers.sh  robot_state_once.sh  start_bringup.sh  start_gravity_compensation.sh  start_joint_position.sh  stop_controller.sh
Code/spacemouse_franka_teleop_test/: README.md  Test0.csv  Test1.csv  package.xml  setup.cfg  setup.py
Code/spacemouse_franka_teleop_test/config/: teleop_params.yaml
Code/spacemouse_franka_teleop_test/config/archive/: teleop_motion_shaping_mode_legacy.yaml
Code/spacemouse_franka_teleop_test/debug_output/: axis_response_hold_only_k2000.csv  axis_response_hold_only_k600.csv  axis_response_live_1mm.csv  axis_response_live_1mm_k2000.csv  axis_response_minus_x_k2000_tau_actual.csv  axis_response_plus_x_1mm_kx6000_kz8000.csv  axis_response_plus_x_3mm_k2000_tau_actual.csv  axis_response_plus_x_3mm_kx2000_kz8000.csv  axis_response_plus_x_k2000_tau_actual.csv  axis_response_reset_current_after_experiment.csv  axis_response_reset_current_after_plus_x_3mm.csv  axis_response_reset_current_final.csv  fixed_offset_k1200.csv  fixed_offset_k2000.csv  fixed_offset_k2000_internal_velocity.csv  fixed_offset_k2000_jacobian_verify.csv  fixed_offset_k2000_nullspace_off.csv  fixed_offset_k2000_robot_state_qdq_velocity.csv  fixed_offset_k600.csv  fixed_offset_matrix_1_qdqfalse_k600.csv  fixed_offset_matrix_2_qdqtrue_k600.csv  fixed_offset_matrix_3_qdqtrue_k1200.csv  fixed_offset_matrix_4_qdqtrue_k2000.csv  official_gravity_compensation_joint_states.csv  test_serl_impedance_fixed_offset_20260624_050916.csv
Code/spacemouse_franka_teleop_test/deprecated_safe_cartesian_controller/: README.md  README_OLD_SPACEMOUSE_POSE_FOLLOWER.md  controller_no_target_test.yaml
Code/spacemouse_franka_teleop_test/deprecated_safe_cartesian_controller/config/: spacemouse_control_params.yaml
Code/spacemouse_franka_teleop_test/launch/: spacemouse_franka_teleop.launch.py
Code/spacemouse_franka_teleop_test/scripts/: build_overlay.sh  check_cpu30_runtime.sh  check_spacemouse.sh  clear_ros.sh  franka_cpu30_env.sh  list_controllers.sh  run_dashboard.sh  run_teleop.sh  set_controller_stiffness.sh  set_spacemouse_target_scale.sh  show_tuning_params.sh  sim_joint_targets.sh  source_ros2_franka_env.sh  start_bringup.sh  start_serl_cartesian_controller.sh
Code/spacemouse_franka_teleop_test/spacemouse_franka_teleop_test/: check_spacemouse.py  motion_shaping.py  pose_action_server.py  sim_joint_targets.py  teleop_dashboard.py  teleop_node.py
docs/: jacobian_mapping_audit.md  ros2_serl_controller_plugin_audit.md  serl_controller_integration_audit.md  torque_command_semantics_audit.md
hil-serl-main/examples/: record_demos.py  record_success_fail.py  train_reward_classifier.py
hil-serl-main/examples/experiments/: __init__.py  mappings.py
serl_franka_controllers-main/: README.md
serl_franka_ros2_control/: CMakeLists.txt  package.xml  serl_franka_ros2_control_plugins.xml
serl_franka_ros2_control/config/: joint_sine_torque_test_controller.yaml  serl_cartesian_impedance_controller.yaml  serl_cartesian_impedance_controller_k1200.yaml  serl_cartesian_impedance_controller_k2000.yaml  serl_cartesian_impedance_controller_k600_joint_state_qdq.yaml  serl_cartesian_impedance_controller_original_like.yaml
serl_franka_ros2_control/deprecated/: serl_cartesian_impedance_controller_debug_20260630.hpp
serl_franka_ros2_control/include/serl_franka_ros2_control/: joint_sine_torque_test_controller.hpp  serl_cartesian_impedance_controller.hpp
serl_franka_ros2_control/launch/: serl_cartesian_impedance_controller.launch.py
serl_franka_ros2_control/src/: joint_sine_torque_test_controller.cpp  serl_cartesian_impedance_controller.cpp
(+17 files in other folders)
